# strict-list

./: CHANGELOG.md  README.md  build.bash  cabal.project  strict-list.cabal
.github/workflows/: build.yaml  bump.yaml  check.yaml  main-maintenance.yaml  pr-validation.yaml  release.yaml
bench/: Main.hs
test/: Main.hs
