cabal-version: 3.0
name: strict-list
version: 1.0.0.0
synopsis: Strict linked list
description:
  Implementation of strict linked list with care taken about stack.

category: Data
homepage: https://github.com/nikita-volkov/strict-list
bug-reports: https://github.com/nikita-volkov/strict-list/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/strict-list

common language-settings
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules: StrictList
  build-depends:
    base >=4.9 && <5,
    deepseq >=1.4.3 && <2,
    hashable >=1.2 && <2,
    semigroupoids >=5.3 && <7,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    rerebase >=1.23 && <2,
    strict-list,
    tasty >=1.5.4 && <1.6,
    tasty-quickcheck >=0.11.1 && <0.12,
