cabal-version: 3.0
name: strict-list
version: 1.0.0.0
synopsis: Strict linked list with stack-safe operations
description:
  A strict linked list with stack-safe operations and reversed-order helpers.

category: Data
homepage: https://github.com/nikita-volkov/strict-list
bug-reports: https://github.com/nikita-volkov/strict-list/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/strict-list

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoImplicitPrelude
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: library
  exposed-modules: StrictList
  build-depends:
    QuickCheck >=2.14 && <3,
    base >=4.13 && <5,
    deepseq >=1.4.3 && <2,
    hashable >=1.2 && <2,
    semigroupoids >=5.3 && <7,

test-suite test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    rerebase >=1.23 && <2,
    strict-list,
    tasty >=1.5.4 && <1.6,
    tasty-quickcheck >=0.11.1 && <0.12,

benchmark bench-list
  import: executable
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends:
    base >=4.13 && <5,
    criterion >=1.5 && <2,
    strict-list,
